# ixa-basic-transmission

./: .gitignore  Cargo.toml  README.md  mise.toml
parameters/: default.toml
params/: README.md  default.toml  large_pop.toml
scenarios/: large.toml  small.toml
src/: contact_manager.rs  forecast.rs  infection_manager.rs  infection_status.rs  main.rs  model.rs  output_manager.rs  parameters.rs  params.rs  person.rs  population_manager.rs  simulation_event.rs  total_infectiousness_multiplier.rs  transmission_manager.rs
src/distr/: gamma.rs  mod.rs
src/ixa_plus/: log.rs  mod.rs  params_macro.rs  person_vec.rs  query.rs  type_index.rs  utils.rs
src/ixa_plus/distr/: distribution.rs  gamma.rs
src/ixa_plus/rate_fn/: constant_rate.rs  ext.rs  generator.rs  macros.rs  mod.rs  rate_fn_trait.rs
src/ixa_plus/scripts/: new_extension.sh
src/ixa_plus/templates/: extension.rs
src/rate_fn/: constant_rate.rs  ext.rs  infectiousness_rate_fn.rs  mod.rs
